# ChangeLog for sci-physics/camfr
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-physics/camfr/ChangeLog,v 1.18 2010/06/25 22:37:22 arfrever Exp $

  25 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  camfr-20070717-r2.ebuild:
  Fix src_test() (bug #316245).

*camfr-20070717-r2 (25 Jun 2010)

  25 Jun 2010; Justin Lecher <jlec@gentoo.org> +camfr-20070717-r2.ebuild,
  +files/camfr-20070717-python.patch:
  Fixes for PYTHON ABIs, #316245

  04 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  camfr-20070717-r1.ebuild:
  Delete call to deprecated python_version().

  12 Nov 2009; Sébastien Fabbro <bicatali@gentoo.org>
  camfr-20070717-r1.ebuild:
  Now depend on boost[python] and removed the use of fortran eclass

  26 Jul 2009; Sébastien Fabbro <bicatali@gentoo.org>
  camfr-20070717-r1.ebuild, files/machine_cfg.py.gentoo:
  Make it work for python 2.6, thanks Dustin Polke, closing bug #278028

  14 Mar 2009; Sébastien Fabbro <bicatali@gentoo.org>
  camfr-20070717-r1.ebuild:
  Switch to EAPI 2

  09 Dec 2008; Sébastien Fabbro <bicatali@gentoo.org>
  +files/machine_cfg.py.gentoo, camfr-20070717-r1.ebuild:
  Propagate LDFLAGS, FFLAGS for newer scons, avoid parsing make.conf

*camfr-20070717-r1 (07 Jul 2008)

  07 Jul 2008; Sébastien Fabbro <bicatali@gentoo.org>
  +camfr-20070717-r1.ebuild:
  Added link for mandatory fortran library.

  06 Jul 2008; Sébastien Fabbro <bicatali@gentoo.org>
  camfr-20070717.ebuild:
  Fixed a leading ',' in lapack_dirs and forced scons to be at least 0.98.

  04 Jul 2008; Sébastien Fabbro <bicatali@gentoo.org>
  camfr-20070717.ebuild:
  Fixed a sed syntax errors and cleaned lapack again

  02 Jul 2008; Sébastien Fabbro <bicatali@gentoo.org>
  +files/camfr-20070717-gcc43.patch, camfr-20070717.ebuild:
  Added gcc-4.3 patch, make it blas/lapack implementation more independent,
  run tests without X (close bug #229753) and some dep cleaning
