@@ -1,6 +1,10 @@
 # ChangeLog for sci-physics/camfr
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-physics/camfr/ChangeLog,v 1.18 2010/06/25 22:37:22 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-physics/camfr/ChangeLog,v 1.19 2010/11/15 15:57:03 arfrever Exp $
+
+  15 Nov 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -camfr-20070717-r1.ebuild:
+  Delete.
 
   25 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   camfr-20070717-r2.ebuild:
